slack_dark.css
/*  Sidebar theme: #333333,#444A47,#D39B46,#FFFFFF,#434745,#FFFFFF,#BBE681,#DB6668 */
body { background: #2d2b2b; color: #e6e6e6; }

a { color: #ffffff; }

a:link, a:visited { color: #ffffff; }

a:hover, a:active, a:focus { color: #e9e9e9; }

hr { border-bottom: 1px solid #424242; border-top: 1px solid #222; }

h1, h2, h3, h4 { color: #e6e6e6; }

h1 a { color: #e6e6e6; }

h1 a:active, h1 a:hover, h1 a:link, h1 a:visited { color: #e6e6e6; }

.bordered { border: 1px solid #363636; }

.top_border { border-top: 1px solid #363636; }

.bottom_border { border-bottom: 1px solid #363636; }

.left_border { border-left: 1px solid #363636; }

.right_border { border-right: 1px solid #363636; }

.bullet { color: #949494; }

.alert { background-color: #363636; border-color: #000; color: #e6e6e6; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5); }

.alert h4 { color: #e6e6e6; }

.alert-info { background-color: #363636; border-color: #000; color: #e6e6e6; }

.alert-info h4 { color: #e6e6e6; }

::-webkit-scrollbar-track { background: #363636 !important; border-left-color: #363636 !important; border-right-color: #363636 !important; color: #363636 !important; }

::-webkit-scrollbar-thumb { background: #545454 !important; border-left-color: #363636 !important; border-right-color: #363636 !important; color: #222 !important; }

::-webkit-scrollbar-corner { background: #222 !important; }

.supports_custom_scrollbar #messages_container::after { background: none !important; }

.monkey_scroll_bar { background: #424242; }

.monkey_scroll_handle_inner { background: #545454; border: 1px solid #828282; }

.monkey_scroll_bar_native_scrollbar_shim { background: transparent; }

#client-ui .monkey_scroll_bar { background: #424242; }

#client-ui .monkey_scroll_handle_inner { background: #545454; border: 3px solid #222; }

.c-scrollbar--monkey .c-scrollbar__track { background: #424242; }

.c-scrollbar--monkey .c-scrollbar__bar { background: #545454; box-shadow: 0 3px 0 #222, 0 -3px 0 #222; }

.client_channels_list_container { background-color: #363636; border-right-color: #222; }

#col_channels { color: #e6e6e6; }

.p-channel_sidebar { background-color: #363636; color: #e6e6e6; }

.p-channel_sidebar__channel, .p-channel_sidebar__channel:link, .p-channel_sidebar__channel:visited, .p-channel_sidebar__channel:hover, .p-channel_sidebar__link, .p-channel_sidebar__link:link, .p-channel_sidebar__link:visited, .p-channel_sidebar__link:hover { color: rgba(230, 230, 230, 0.8) !important; }

.p-channel_sidebar__channel--selected, .p-channel_sidebar__channel--selected:link, .p-channel_sidebar__channel--selected:visited, .p-channel_sidebar__channel--selected:hover, .p-channel_sidebar__link--selected, .p-channel_sidebar__link--selected:link, .p-channel_sidebar__link--selected:visited, .p-channel_sidebar__link--selected:hover { color: #e6e6e6; }

.p-channel_sidebar__channel:hover, .p-channel_sidebar__link:hover { background: #222 !important; }

.p-channel_sidebar__header { color: #e6e6e6 !important; }

.p-channel_sidebar__channel--im.p-channel_sidebar__channel--selected .c-presence, .p-channel_sidebar__channel--im-slackbot.p-channel_sidebar__channel--selected::before { color: #e6e6e6; }

.p-channel_sidebar__channel--im .c-presence--away { color: #949494; }

.p-channel_sidebar__channel--selected, .p-channel_sidebar__link--selected { background: #545454 !important; }

.p-channel_sidebar__channel--selected:hover, .p-channel_sidebar__link--selected:hover { background: #545454 !important; }

.p-channel_sidebar__channel--selected::before, .p-channel_sidebar__channel--selected:hover::before, .p-channel_sidebar__channel--selected::after, .p-channel_sidebar__channel--selected:hover::after { color: #e6e6e6; }

.p-channel_sidebar__link--selected::before, .p-channel_sidebar__link--selected::after { color: #e6e6e6; }

.p-channel_sidebar__badge, .p-channel_sidebar__banner--mentions { background: #bf360c; }

.p-channel_sidebar .c-custom_scrollbar__thumb_vertical, .p-channel_sidebar .c-scrollbar__bar { background: #545454; }

.p-channel_sidebar__channel--unread:not(.p-channel_sidebar__channel--muted):not(.p-channel_sidebar__channel--selected) .p-channel_sidebar__name, .p-channel_sidebar__link--unread .p-channel_sidebar__name, .p-channel_sidebar__link--invites:not(.p-channel_sidebar__link--dim) .p-channel_sidebar__name, .p-channel_sidebar__section_heading_label--clickable:hover, .p-channel_sidebar__quickswitcher:hover { color: whitesmoke !important; }

.p-channel_sidebar__close_container:hover { background: #000; }

.channels_list_holder h2 { color: #e6e6e6 !important; }

.channels_list_holder h2.hoverable:not(.jquery_hover):hover { color: #e6e6e6; opacity: 0.8; }

.channels_list_holder ul { color: #e6e6e6 !important; }

.channels_list_holder ul li { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }

.channels_list_holder ul li .channel_name, .channels_list_holder ul li .group_name, .channels_list_holder ul li .im_name, .channels_list_holder ul li .mpim_name, .channels_list_holder ul li > a { background: #363636; color: rgba(230, 230, 230, 0.8) !important; }

.channels_list_holder ul li .channel_name:hover, .channels_list_holder ul li .group_name:hover, .channels_list_holder ul li .im_name:hover, .channels_list_holder ul li .mpim_name:hover, .channels_list_holder ul li > a:hover { background: #222 !important; border-bottom-right-radius: 0.25rem; border-top-right-radius: 0.25rem; }

.channels_list_holder ul li .primary_action.im_name:hover .im_name_background, .channels_list_holder ul li .primary_action.feature_user_custom_status:hover .im_name_background, .channels_list_holder ul li .primary_action:not(.feature_user_custom_status):hover { background: #222; }

.channels_list_holder ul li.mention a { color: #e6e6e6; }

.channels_list_holder ul li.unread:not(.muted_channel) .primary_action { color: whitesmoke !important; }

.channels_list_holder ul li.unread .prefix { color: #e6e6e6 !important; opacity: 1; }
/* ... */

